<resources>
    <string name="app_name">fightCovid</string>
    <string name="title_activity_home">ActivityHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello,</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_protective">Precautionary measures</string>
    <string name="menu_news">News updates</string>
    <string name="menu_district">District wise count</string>
    <string name="menu_helpline">Helpline</string>
    <string name="menu_login">Login</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_mask">Face Mask Tips</string>
    <string name="menu_support">Face Mask Tips</string>
    <string name="ads_1">ca-app-pub-5811629991681115/4267998630</string>
    <!--ca-app-pub-3940256099942544/6300978111 for testing-->
    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="home_second">Home Second</string>
</resources>
