<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pratikthorat.coronatracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.pratikthorat.coronatracker.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_protective"
        android:name="com.pratikthorat.coronatracker.ui.protective.ProtectiveFragment"
        android:label="@string/menu_protective"
        tools:layout="@layout/fragment_protective" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.pratikthorat.coronatracker.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_district"
        android:name="com.pratikthorat.coronatracker.ui.district.DistrictFragment"
        android:label="@string/menu_district"
        tools:layout="@layout/district_fragment" />


    <fragment
        android:id="@+id/nav_notification"
        android:name="com.pratikthorat.coronatracker.ui.notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/notification_fragment" />
    <fragment
        android:id="@+id/nav_helpline"
        android:name="com.pratikthorat.coronatracker.ui.helpline.HelplineFragment"
        android:label="@string/menu_helpline"
        tools:layout="@layout/helpline_fragment" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.pratikthorat.coronatracker.ui.login.LoginFragment"
        android:label="@string/menu_login" />

    <fragment
        android:id="@+id/nav_mask"
        android:name="com.pratikthorat.coronatracker.ui.faceMask.MaskFragment"
        android:label="@string/menu_mask"
        tools:layout="@layout/mask_fragment" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.pratikthorat.coronatracker.ui.faceMask.MaskFragment"
        android:label="@string/menu_support" />
</navigation>